# mini-X509-Linter

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  test.pem
crates/cli/: Cargo.toml
crates/cli/src/: inspect.rs  main.rs  output.rs  save.rs
crates/cli/tests/: exit_codes.rs  from_host.rs  golden.rs  inspect.rs  output.rs  purpose.rs  save.rs
crates/cli/tests/snapshots/: golden__json_output__good_json.snap  golden__text_output__cabf_br_validity_400_days_text.snap  golden__text_output__chain_bundle_text.snap  golden__text_output__good_text.snap  golden__verbose_output__good_verbose_text.snap  inspect__chain_info__chain_bundle_info_json_summaries.snap  inspect__chain_info__chain_bundle_info_text.snap  inspect__good_cert_text__good_info_text.snap  inspect__json_envelope__good_info_json_summary.snap  inspect__slh_dsa_ca_text__slh_dsa_info_text.snap
crates/fetch/: Cargo.toml
crates/fetch/src/: lib.rs
crates/fetch/tests/: handshake.rs  validation.rs
crates/linter/: Cargo.toml
crates/linter/src/: cert.rs  chain.rs  finding.rs  lib.rs  registry.rs  source.rs
crates/linter/src/chain_testdata/: link_inter.pem  link_leaf.pem  link_root.pem  link_stray.pem
crates/linter/src/lints/: mod.rs
crates/linter/src/lints/cabf_br/: basic_constraints_present.rs  certificate_policies.rs  cn_in_san.rs  dnsname_syntax.rs  ext_key_usage_any_prohibited.rs  ext_key_usage_server_auth_present.rs  ext_key_usage_server_auth_required.rs  extra_subject_common_names.rs  mod.rs  no_internal_names_or_reserved_ip.rs  organizational_unit_name_prohibited.rs  reserved.rs  rsa_modulus_bits_multiple_of_8.rs  rsa_public_exponent_in_range.rs  san_dns_or_ip_only.rs  san_present.rs  subject_contains_reserved_ip.rs  subject_country_not_iso.rs  subscriber_basic_constraints_path_len_prohibited.rs  subscriber_key_usage_prohibited.rs  validity_max_398_days.rs
crates/linter/src/lints/cabf_cs/: authority_information_access.rs  crl_distribution_points.rs  ecdsa_curve_params.rs  eku_required.rs  key_usage_required.rs  mod.rs  rsa_key_size.rs  validity_period_longer_than_39_months.rs  validity_period_longer_than_460_days.rs
crates/linter/src/lints/cabf_ev/: business_category_invalid.rs  business_category_missing.rs  jurisdiction_country_missing.rs  mod.rs  not_wildcard.rs  organization_id_present.rs  organization_name_missing.rs  policy.rs  san_no_ip_address.rs  serial_number_missing.rs  validity_max_398_days.rs
crates/linter/src/lints/cabf_smime/: authority_key_identifier_present.rs  crl_distribution_points_http.rs  crl_distribution_points_present.rs  eku_email_protection_present.rs  eku_no_server_auth.rs  email_in_san.rs  key_usage_critical.rs  key_usage_present.rs  mod.rs  san_not_critical.rs  san_present.rs  single_email_subject.rs  subject_country_valid.rs
crates/linter/src/lints/chain/: aki_ski_match.rs  issuer_is_ca.rs  issuer_not_in_chain.rs  mod.rs  not_in_order.rs  path_len_respected.rs  subject_issuer_dn_match.rs  subject_signature.rs  validity_nested.rs  verify.rs
crates/linter/src/lints/hygiene/: ecdsa_curve_allowlist.rs  mod.rs  no_sha1_signature.rs  not_expired.rs  rsa_key_min_2048.rs
crates/linter/src/lints/pqc/: algorithm_known.rs  kem_params.rs  key_usage_consistency.rs  mlkem_algorithm_known.rs  mlkem_key_usage_consistency.rs  mlkem_public_key_length.rs  mlkem_spki_parameters_absent.rs  mod.rs  params.rs  public_key_length.rs  signature_parameters_absent.rs  spki_parameters_absent.rs
crates/linter/src/lints/rfc5280/: basic_constraints_critical_on_ca.rs  ca_subject_field_empty.rs  ext_authority_key_identifier_no_key_identifier.rs  ext_key_usage_without_bits.rs  ext_name_constraints_not_critical.rs  ext_san_no_entries.rs  key_usage_present_when_ca.rs  mod.rs  path_len_constraint_improperly_included.rs  san_present_if_subject_empty.rs  serial_number_positive.rs  subject_dn_country_not_printable_string.rs  subject_key_identifier_presence.rs  utc_time_not_in_zulu.rs  validity_window.rs  version_is_v3.rs
crates/linter/tests/: cabf_br.rs  cabf_cs.rs  cabf_ev.rs  cabf_smime.rs  chain.rs  hygiene.rs  not_expired.rs  pqc.rs  registry.rs  rfc5280.rs
spec/: plan.md
spec/features/01-workspace-skeleton-core-types/: plan.md  review.md  test-plan.md
spec/features/02-lint-engine-registry-output/: plan.md  review.md  test-plan.md
spec/features/03-rfc5280-rule-set/: plan.md  review.md  test-plan.md
spec/features/04-crypto-hygiene-rule-set/: plan.md  review.md  test-plan.md
spec/features/05-cabf-br-rule-set/: plan.md  review.md  test-plan.md
spec/features/06-cli-polish-output/: plan.md  review.md  test-plan.md
spec/features/07-fetch-from-host/: plan.md  review.md  test-plan.md
spec/features/08-cert-inspection/: plan.md  review.md  test-plan.md
spec/features/09-code-signing-br/: plan.md  review.md  test-plan.md
spec/features/10-smime-br/: plan.md  review.md  test-plan.md
spec/features/11-cabf-ev/: plan.md  review.md  test-plan.md
testdata/: cabf_br_cn_not_in_san.pem  cabf_br_cn_reserved_ip.pem  cabf_br_country_not_iso.pem  cabf_br_dnsname_bad_char.pem  cabf_br_dnsname_bare_wildcard.pem  cabf_br_dnsname_label_too_long.pem  cabf_br_dnsname_underscore.pem  cabf_br_eku_any.pem  cabf_br_eku_no_server_auth.pem  cabf_br_internal_san.pem  cabf_br_ku_cert_sign.pem  cabf_br_ku_crl_sign.pem  cabf_br_leaf_path_len.pem  cabf_br_missing_serverauth.pem  cabf_br_no_basic_constraints.pem  cabf_br_no_policies.pem  cabf_br_no_san.pem  cabf_br_ou_present.pem  cabf_br_policies_no_reserved.pem  cabf_br_rsa_exp_3.pem  cabf_br_rsa_mod_not_oct.pem  cabf_br_san_email_entry.pem  cabf_br_two_common_names.pem  cabf_br_validity_400_days.pem  cabf_cs_ecdsa_bad_curve.pem  cabf_cs_good.pem  cabf_cs_missing_key_usage.pem  cabf_cs_no_aia.pem  cabf_cs_no_crl.pem  cabf_cs_rsa_2048.pem  cabf_cs_validity_40_months.pem  cabf_cs_validity_500_days.pem  cabf_ev_business_category_invalid.pem  cabf_ev_business_category_missing.pem  cabf_ev_good.pem  cabf_ev_jurisdiction_country_missing.pem  cabf_ev_org_id_missing.pem  cabf_ev_org_name_missing.pem  cabf_ev_san_ip.pem  cabf_ev_serial_number_missing.pem  (+63 more)
testdata/keys/: good.key
(+97 files in other folders)
