[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mini-x509-lint"
path = "src/main.rs"

[features]
# Network is OPT-IN: the default build pulls in NO TLS/network dependency.
# Build/run with fetch support via:
#   cargo build -p cli --features fetch
#   cargo run -p cli --features fetch -- --from-host example.com
fetch = ["dep:fetch"]

[dependencies]
# `serde` feature enables Serialize on the contract types for JSON output.
# `verify` enables the chain crypto pass (`chain_signature_valid`) so the binary
# verifies signatures out of the box; library users opt in separately. The
# `fetch` feature stays opt-in (see `[features]` above).
linter = { path = "../linter", features = ["serde", "verify"] }
# Pinned 2026-06-15 to latest stable releases (see feature 01 plan.md).
clap = { version = "4", features = ["derive"] }
anyhow = "1"
# JSON formatter. Pinned 2026-06-16 to latest stable 1.0.150.
serde_json = "1"
# TLS retrieval (feature 07). Optional + behind the `fetch` feature so a default
# build has no network dependency. Deliberately NOT in `default`.
fetch = { path = "../fetch", optional = true }

[dev-dependencies]
# Snapshot testing for the golden-file tests (feature 06 task 04).
# Pinned 2026-06-17 to latest stable 1.48.0 (verified against crates.io).
# `json` enables `assert_json_snapshot!` for the JSON-shape golden test.
insta = { version = "1", features = ["json"] }
